[gd_scene load_steps=9 format=3 uid="uid://b82tweuisuwtf"]

[ext_resource type="Script" path="res://Scenes/battle_reward/battle_reward.gd" id="1_aqpxl"]
[ext_resource type="Theme" uid="uid://llodmqv2j7vt" path="res://Utilities/Themes/button_theme.tres" id="2_hhtu2"]
[ext_resource type="Texture2D" uid="uid://bi4smcpjk7ktc" path="res://Graphics/backgrounds/forest/forest_day.jpg" id="2_hva2l"]
[ext_resource type="LabelSettings" uid="uid://dqpqpk2ys3h25" path="res://Utilities/Themes/menu_header_text.tres" id="3_n8vmi"]
[ext_resource type="PackedScene" uid="uid://dngb8cht4mqbl" path="res://Scenes/ui/reward_button.tscn" id="4_jsdaj"]
[ext_resource type="Texture2D" uid="uid://5r0yx38u0vh5" path="res://Graphics/ui/gold_icon.png" id="5_3lc7x"]
[ext_resource type="Texture2D" uid="uid://didtde55261nd" path="res://Graphics/items/shards/supp_small.png" id="6_wnsqx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d8ktr"]
bg_color = Color(0.266667, 0, 0.431373, 0.564706)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.37551, 0.00165262, 0.653501, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[node name="BattleReward" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_aqpxl")

[node name="BattleBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.277778
offset_right = 640.0
offset_bottom = 260.0
texture = ExtResource("2_hva2l")
expand_mode = 1
stretch_mode = 6
metadata/_edit_use_anchors_ = true

[node name="BackgroundDimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.556863)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -116.5
offset_right = 119.0
offset_bottom = 116.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Battle Reward"
label_settings = ExtResource("3_n8vmi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RewardContainer" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_d8ktr")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/RewardContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Rewards" type="VBoxContainer" parent="VBoxContainer/RewardContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="GoldReward" parent="VBoxContainer/RewardContainer/MarginContainer/Rewards" instance=ExtResource("4_jsdaj")]
layout_mode = 2
reward_icon = ExtResource("5_3lc7x")
reward_text = "149 Gold"

[node name="ShardReward" parent="VBoxContainer/RewardContainer/MarginContainer/Rewards" instance=ExtResource("4_jsdaj")]
layout_mode = 2
reward_icon = ExtResource("6_wnsqx")
reward_text = "Thunder"

[node name="BackButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 30)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_hhtu2")
text = "Skip"

[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
